--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>飞翔的猪的个人博客</title>
-  <link rel="preload" href="assets/fonts/lxgw/LXGWWenKai-Regular.woff2" as="font" type="font/ttf" crossorigin />
-  <link rel="preload" href="assets/fonts/lxgw/LXGWWenKai-Medium.woff2" as="font" type="font/ttf" crossorigin />
+  <link rel="preload" href="assets/fonts/lxgw/LXGWWenKai-Regular.woff2" as="font" type="font/woff2" crossorigin />
+  <link rel="preload" href="assets/fonts/lxgw/LXGWWenKai-Medium.woff2" as="font" type="font/woff2" crossorigin />
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 
@@ -33,6 +33,7 @@
 </body>
 
 </html>
+
 
 
 
