Enhance index.html with background and header
Added background and header elements to the HTML structure.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 
+﻿<div class="bg">
+  <div class="blob b1"></div>
+  <div class="blob b2"></div>
+  <div class="grain"></div>
+</div>
+
+<header class="topbar">
+  <div class="brand">飞翔的猪的个人博客</div>
+  <nav class="nav">
+    <a class="nav-link" href="index.html" data-nav="home">主页</a>
+    <a class="nav-link" href="about.html" data-nav="about">关于</a>
+  </nav>
+</header>
+
 <body data-page="home">
   <div id="siteHeader"></div>
 
@@ -29,10 +43,10 @@
   </main>
 
   <script src="js/app.js"></script>
-  <script src="js/header.js"></script>
 </body>
 
 </html>
+
 
 
 
