--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="preload" href="assets/fonts/lxgw/LXGWWenKai-Regular.woff2" as="font" type="font/woff2" crossorigin />
   <link rel="preload" href="assets/fonts/lxgw/LXGWWenKai-Medium.woff2" as="font" type="font/woff2" crossorigin />
   <link rel="stylesheet" href="css/styles.css" />
+  <script src="js/header.js" defer></script>
 </head>
 
 <body data-page="home">
@@ -33,6 +34,7 @@
 </body>
 
 </html>
+
 
 
 
