Update index.html with preload links
Added preload links for header.html and js/header.js.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <title>飞翔的猪的个人博客</title>
   <link rel="preload" href="assets/fonts/lxgw/LXGWWenKai-Regular.woff2" as="font" type="font/woff2" crossorigin />
   <link rel="preload" href="assets/fonts/lxgw/LXGWWenKai-Medium.woff2" as="font" type="font/woff2" crossorigin />
+  
+  <link rel="preload" href="header.html" as="document" crossorigin>
+  <link rel="preload" href="js/header.js" as="script">
+
   <link rel="stylesheet" href="css/styles.css" />
   <script src="js/header.js" defer></script>
 </head>
@@ -33,6 +37,7 @@
 </body>
 
 </html>
+
 
 
 
